# fast-agent

./: .gitignore  .goosehints  .pre-commit-config.yaml  .python-version  CONTRIBUTING.md  LICENSE  README-multipart-serialization.md  README.md  agent.py  fastagent.config.yaml  fastagent.jsonl  hatch_build.py  mcp_agent.config.yaml  project_contents.md  pyproject.toml  resource2.md  short_story.md  test_agent_types.py  test_parallel_go.py  test_process.py
.github/: release-drafter.yml
.github/workflows/: checks.yml  create-tag.yml  main-checks.yml  pr-checks.yml  publish-pypi.yml  release-drafter.yml
examples/azure-openai/: fastagent.config.yaml
examples/bedrock/: fast-agent.config.yaml
examples/custom-agents/: agent.py
examples/data-analysis/: analysis-campaign.py  analysis.py
examples/decorator/: chain_example.py  composed.py  graded_report.md  letter_persona_a.md  letter_persona_b.md  main.py  main2.py  mcp_agent.config.yaml  optimizer.py  orchestrator.py  parallel.py  persona.md  requirements.txt  router.py  short_story.md  test_server.py  tiny.py
examples/diagnose/: agent.py  chain_route.py  fastagent.config.yaml  prompt1.txt  prompt2.txt
examples/hello_world/: README.md  main.py  mcp_agent.config.yaml
examples/marimo_mcp_basic_agent/: README.md  mcp_agent.config.yaml  notebook.py
examples/mcp/elicitations/: README.md  elicitation_account_server.py  elicitation_forms_server.py  elicitation_game_server.py  fastagent.config.yaml  fastagent.secrets.yaml.example  forms_demo.py  game_character.py  game_character_handler.py  tool_call.py
examples/mcp/mcp-filtering/: fastagent.config.yaml  fastagent.secrets.yaml.example  mcp_server.py  test_mcp_filtering.py
examples/mcp/state-transfer/: agent_two.py  fastagent.config.yaml  fastagent.secrets.yaml.example
examples/mcp/vision-examples/: example1.py  example2.py  example3.py  fastagent.config.yaml
examples/mcp_agent_server/: README.md  client.py  mcp_agent.config.yaml  server.py
examples/mcp_basic_agent/: README.md  main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml  mcp_agent.secrets.yaml.example  requirements.txt
examples/mcp_basic_agent/logs/: mcp_basic_agent_20250130_215534.jsonl  mcp_basic_agent_20250130_215624.jsonl  mcp_basic_agent_20250130_220601.jsonl
examples/mcp_basic_ollama_agent/: README.md  main.py  mcp_agent.config.yaml  requirements.txt
examples/mcp_basic_slack_agent/: README.md  main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example
examples/mcp_file_ops/: file_ops_server.py
examples/mcp_hello_world/: main.py  mcp_agent.config.yaml  requirements.txt
examples/mcp_model_selector/: README.md  interactive.py  main.py  mcp_agent.config.yaml  requirements.txt
examples/mcp_researcher/: main-evalopt.py  main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example  requirements.txt
examples/mcp_researcher/agent_folder/: Eutelsat_Investment_Report.md
examples/mcp_root_test/: fastagent.config.yaml  main.py  mcp_agent.config.yaml  requirements.txt  root_test_server.py
examples/mcp_root_test/test_data/: 2024-10-26-test-data.csv
examples/mcp_server_aggregator/: README.md  main.py  mcp_agent.config.yaml
examples/otel/: agent.py  agent2.py  docker-compose.yaml  fastagent.config.yaml
examples/researcher/: fastagent.config.yaml  researcher-eval.py  researcher-imp.py
examples/router_workflow/: main.py
examples/streamlit_mcp_basic_agent/: README.md  hello.py  main.py  mcp_agent.config.yaml  pyproject.toml  requirements.txt
examples/streamlit_mcp_rag_agent/: README.md  agent_state.py  main.py  mcp_agent.config.yaml  requirements.txt
examples/tensorzero/: Makefile  README.md  agent.py  docker-compose.yml  fastagent.config.yaml  image_demo.py  simple_agent.py
examples/tensorzero/mcp_server/: Dockerfile  entrypoint.sh  mcp_server.py  pyproject.toml
examples/tensorzero/tensorzero_config/: system_schema.json  system_template.minijinja  tensorzero.toml
examples/workflow_evaluator_optimizer/: README.md  main.py  mcp_agent.config.yaml
examples/workflow_orchestrator/: README.md  graded_report.md  main.py
examples/workflow_orchestrator_worker/: README.md  gpt-4ograded_report.md  graded_report.md  main.py  mcp_agent.config.yaml  short_story.md
examples/workflow_parallel/: README.md  main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml.example
examples/workflow_router/: main.py  mcp_agent.config.yaml  mcp_agent.secrets.yaml
examples/workflow_swarm/: README.md  main.py  mcp_agent.config.yaml
examples/workflow_swarm/policies/: flight_cancellation_policy.md  flight_change_policy.md  lost_baggage_policy.md
examples/workflows/: evaluator.py  orchestrator.py  parallel.py  router.py
integration_tests/workflow/router/: test_router.py
schema/: mcp-agent.config.schema.json
scripts/: event_replay.py  event_summary.py  event_viewer.py  example.py  format.py  gen_schema.py  lint.py  progress_test.py  promptify.py  rich_progress_test.py  test_package_install.sh
scripts/sample_logs/: basic-agent-4o-mini.jsonl  basic-agent-o3-mini.jsonl  mcp_root_test.jsonl  workflow_parallel-o3-mini.jsonl
src/mcp_agent/: __init__.py  app.py  config.py  console.py  context.py  context_dependent.py  debug.py  event_progress.py  mcp_server_registry.py  progress_display.py
src/mcp_agent/agents/: agent.py  base_agent.py  mcp_agent.py  swarm.py  swarm_anthropic.py  swarm_openai.py
src/mcp_agent/cli/: __main__.py  constants.py  main.py  terminal.py
src/mcp_agent/core/: __init__.py  agent_app.py  agent_types.py  agent_utils.py  base_agent.py  decorator_app.py  decorators.py  direct_agent_app.py  direct_decorators.py  direct_factory.py  direct_fastagent.py  enhanced_prompt.py  (+18 more)
tests/: test_event_progress.py  test_model_factory.py
tests/e2e/: conftest.py
tests/fixture/: README.md  expected_output.txt  mcp_basic_agent_20250130_215558.jsonl  mcp_basic_agent_20250130_220640.jsonl  mcp_basic_agent_20250130_222829.jsonl  mcp_basic_agent_20250131_161123.jsonl  mcp_basic_agent_20250131_205604.jsonl
tests/integration/: conftest.py
tests/unit/: test_elicitation_format_validation.py
(+483 files in other folders)
